Adding cv cover image

--- a/css/creative.css
+++ b/css/creative.css
@@ -187,6 +187,20 @@ header {
     -o-background-size: cover;
 }
 
+cvheader {
+    position: relative;
+    width: 100%;
+    min-height: auto;
+    text-align: center;
+    color: #fff;
+    background-image: url(../img/cv_evo.png);
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 header .header-content {
     position: relative;
     width: 100%;
