--- a/css/creative.css
+++ b/css/creative.css
@@ -193,7 +193,7 @@ cvheader {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/cv_evo.png);
+    background-image: url(../img/evo_cv.png);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
