--- a/css/resume.css
+++ b/css/resume.css
@@ -15,6 +15,6 @@ body { font-family: Georgia; color: #fff; }
 
 /* --// override to force 1/8th width grids -- */
 .yui-gf .yui-u{width:80.2%;}
-.yui-gf div.first{width:12.3%;}
+/*.yui-gf div.first{width:12.3%;}*/
 
 h7 {font-size:28px; font-family:Georgia; font-weight: normal; font-style:italic}
