--- a/css/creative.css
+++ b/css/creative.css
@@ -187,20 +187,6 @@ header {
     -o-background-size: cover;
 }
 
-cvheader {
-    position: relative;
-    width: 100%;
-    min-height: auto;
-    text-align: center;
-    color: #fff;
-    background-image: url(../img/evo_cv.png);
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-
 header .header-content {
     position: relative;
     width: 100%;
@@ -461,6 +447,7 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-xl {
     padding: 15px 30px;
+    margin-bottom: 10px;
 }
 
 ::-moz-selection {
