--- a/css/creative.css
+++ b/css/creative.css
@@ -56,6 +56,10 @@ p {
     background-color: rgb(56,56,56) ;
 }
 
+.yui-u p {
+    margin-top: 15px ;
+}
+
 .bg-dark {
     color: #fff;
     background-color: #222;
