--- a/css/creative.css
+++ b/css/creative.css
@@ -242,6 +242,10 @@ header .header-content .header-content-inner p {
     }
 }
 
+#doc4 {
+      width:100%;
+}
+
 .section-heading {
     margin-top: 0;
 }
