--- a/font-awesome/css/font-awesome.css
+++ b/font-awesome/css/font-awesome.css
@@ -1346,6 +1346,10 @@
 .fa-graduation-cap:before {
   content: "\f19d";
 }
+.fa-dragon:before,
+.fa-dragon:before {
+  content: "\f19d";
+}
 .fa-yahoo:before {
   content: "\f19e";
 }
